--- a/lab2/lab2_2.Rmd
+++ b/lab2/lab2_2.Rmd
@@ -51,17 +51,28 @@ Work through these examples and make adjustments to the values to experiment.
 
 1. Evaluate all numerics in `my_vector_sequence` to determine which has a value of 15.  
 ```{r}
-
+my_vector_sequence == 15
 ```
 
 2. We can use operators such as <, >, ==, <==, etc. Show all values in `my_vector_sequence` that are less than 10.  How about less than or equal to 10?  
 ```{r}
-
+my_vector_sequence < 10
+```
+```{r}
+my_vector_sequence <= 10
 ```
 
 3. If you use `[]` then you only get the values, not the logical evaluation of the entire vector. Experiment with this by adjusting the chunk below.    
 ```{r}
 my_vector_sequence[my_vector_sequence <= 10]
+```
+
+```{r}
+my_vector_sequence[my_vector_sequence >= 50]
+```
+
+```{r}
+my_vector_sequence[my_vector_sequence = 85]
 ```
 
 ## Data Matrices
@@ -133,12 +144,14 @@ all_harry_potter_matrix
 ## Practice
 1. What are the total earnings for the US and non-US regions?  
 ```{r}
-
+TotEarn <- colSums(all_harry_potter_matrix)
+TotEarn
 ```
 
 2. Add this information to the data matrix. Hint: you are adding a row, not a column.  
 ```{r}
-
+all_harry_potter_matrix2 <- rbind(all_harry_potter_matrix, TotEarn)
+all_harry_potter_matrix2
 ```
 
 ## A few Extras
