--- a/lab2/lab2_hw.Rmd
+++ b/lab2/lab2_hw.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 2 Homework"
-author: "Please Add Your Name Here"
+author: "Oonagh Pretorius"
 date: "`r Sys.Date()`"
 output:
   html_document:
@@ -14,8 +14,11 @@ Answer the following questions and complete the exercises in RMarkdown. Please e
 Make sure to use the formatting conventions of RMarkdown to make your report neat and clean!  
 
 1. What is a vector in R?  
+A vector is a type of data structure in R. It is the most basic of data objects. There are six kinds, namely; logical, integer, complex, double, character and raw. 
 
 2. What is a data matrix in R?  
+
+A data matrix is another type of data structure in R. It is built by stacking vectors of the same data type, and arranged into a specified number of rows and columns.
 
 3. Below are data collected by three scientists (Jill, Steve, Susan in order) measuring temperatures of eight hot springs. Run this code chunk to create the vectors.  
 ```{r}
@@ -30,6 +33,11 @@ spring_8 <- c(36.80, 36.45, 33.15)
 ```
 
 4. Build a data matrix that has the springs as rows and the columns as scientists.  
+
+```{r}
+
+```
+
 
 5. The names of the springs are 1.Bluebell Spring, 2.Opal Spring, 3.Riverside Spring, 4.Too Hot Spring, 5.Mystery Spring, 6.Emerald Spring, 7.Black Spring, 8.Pearl Spring. Name the rows and columns in the data matrix. Start by making two new vectors with the names, then use `colnames()` and `rownames()` to name the columns and rows.
 
