--- a/lab2/lab2_1.Rmd
+++ b/lab2/lab2_1.Rmd
@@ -139,6 +139,6 @@ new_vector <- c(7, 6.2, 5, 9, NA, 4, 9.8, 7, 3, 2)
 mean(new_vector, na.rm=T) #na.rm removes the NA values in the vector
 ```
 
-## That's it! Take a break and I will see you on Zoom!  
+## That's it! Let's take a break and then move on to part 2!
 
 -->[Home](https://jmledford3115.github.io/datascibiol/)  
