--- a/lab3/lab_3_intro.Rmd
+++ b/lab3/lab_3_intro.Rmd
@@ -15,7 +15,7 @@ library("jpeg")
 2. Copy your repository to the desktop.   
 5. Copy the class repository to the desktop (https://github.com/jmledford3115/datascibiol).  
 6. Copy the files for today's lab from the class repository and paste them into **your** repository.  
-7. Open today's lab in RStudio.  
+7. Open today's lab in RStudio  
 
 ## Review from last time
 ### *With a partner, discuss the following questions*
