--- a/lab3/lab3_hw.Rmd
+++ b/lab3/lab3_hw.Rmd
@@ -3,9 +3,9 @@ title: "Lab 3 Homework"
 author: "Oonagh Pretorius"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: yes
 ---
 
 ## Instructions
@@ -19,67 +19,102 @@ library(tidyverse)
 ```
 
 ## Mammals Sleep
+  
 1. For this assignment, we are going to use built-in data on mammal sleep patterns. From which publication are these data taken from? Since the data are built-in you can use the help function in R.
 ```{r}
-mammal
-mammal_sleep <- readr::read_csv("mammals_sleep_allison_cicchetti_1976.csv")
+msleep
+#?msleep
 ```
-
+It is from V. M. Savage and G. B. West. A quantitative, theoretical framework for understanding mammalian sleep. Proceedings of the National Academy of Sciences, 104 (3):1051-1056, 2007.
+  
 2. Store these data into a new data frame `sleep`.
 ```{r}
-
+sleep <- data.frame(msleep)
+names(sleep)
 ```
-
+  
 3. What are the dimensions of this data frame (variables and observations)? How do you know? Please show the *code* that you used to determine this below.  
 ```{r}
-
+dim(sleep)
 ```
+This shows that there are 83 rows by 11 columns.
 
+Alternatively, we can use str(), which provides additional metadata.
+```{r}
+str(sleep)
+```
+  
 4. Are there any NAs in the data? How did you determine this? Please show your code.  
 ```{r}
-
+is.na(sleep)
+#is.na.data.frame(sleep) does the same thing.
 ```
+Yes, there are several NAs as shown when each entry is evaluated.
 
+To simply ask if there are any NAs at all, we can use any(is.na(x)) 
+
+```{r}
+any(is.na(sleep))
+```
+  
 5. Show a list of the column names is this data frame.
 ```{r}
-
+colnames(sleep)
 ```
-
+  
 6. How many herbivores are represented in the data?  
 ```{r}
-
+herbivores <- filter(sleep, vore=="herbi")
+herbivores
+count(herbivores)
 ```
-
+There are 32 herbivores in the dataframe.
+Another approach is to use table():
+```{r}
+table(sleep$vore=="herbi")
+```
+  
 7. We are interested in two groups; small and large mammals. Let's define small as less than or equal to 1kg body weight and large as greater than or equal to 200kg body weight. Make two new dataframes (large and small) based on these parameters.
 ```{r}
+large <- filter(sleep, bodywt>1)
+large
+```
 
+```{r}
+small <- filter(sleep, bodywt<=1)
+small
 ```
 
 8. What is the mean weight for both the small and large mammals?
 ```{r}
-
+mean(large$bodywt)
 ```
 
 ```{r}
-
+mean(small$bodywt)
 ```
 
 9. Using a similar approach as above, do large or small animals sleep longer on average?  
 ```{r}
-
+mean(large$sleep_total)
 ```
 
 ```{r}
-
+mean(small$sleep_total)
 ```
+```{r}
+mean(large$sleep_total) < mean(small$sleep_total)
+```
+On average, small animals sleep longer than large animals.
+
 
 10. Which animal is the sleepiest among the entire dataframe?
 ```{r}
-
+which.max(sleep$sleep_total)
 ```
-
+This tells us that the animal in row 43 sleeps the longest. By indexing, we can request that row and see that the sleepiest animal is the little brown bat.
 ```{r}
-
+sleep[43,]
 ```
 
 ## Push your final code to GitHub!
