--- a/lab4/lab4_1.Rmd
+++ b/lab4/lab4_1.Rmd
@@ -67,6 +67,9 @@ We are only interested in lakeid and scalelength.
 select(fish, "lakeid", "scalelength")
 ```
 
+### **We use " " here to tell R that the column name is NOT an object.**
+
+
 To add a range of columns use `start_col:end_col`.
 ```{r}
 fish
@@ -96,15 +99,16 @@ When columns are sequentially named, `starts_with()` makes selecting columns eas
 select(fish, starts_with("radii"))
 ```
 
-Options to select columns based on a specific criteria include:  
+Options to select **columns** based on a specific criteria include:  
 1. ends_with() = Select columns that end with a character string  
 2. contains() = Select columns that contain a character string  
 3. matches() = Select columns that match a regular expression  
-4. one_of() = Select columns names that are from a group of names  
+4. one_of() = Select column names that are from a group of names  
 
 ```{r}
 names(fish)
 ```
+
 
 ```{r}
 select(fish, ends_with("id"))
@@ -114,6 +118,7 @@ select(fish, ends_with("id"))
 select(fish, contains("fish"))
 ```
 
+## **NB** helps you to find things that start with something and end with something.
 We won't cover [regex](https://en.wikipedia.org/wiki/Regular_expression) in this class, but the following code is helpful when you know that a column contains a letter (in this case "a") followed by a subsequent string (in this case "er").  
 ```{r}
 select(fish, matches("a.+er"))
@@ -142,45 +147,57 @@ mammals <- readr::read_csv("data/mammal_lifehistories_v2.csv")
 
 1. Use one or more of your favorite functions to assess the structure of the data.  
 ```{r}
-
+glimpse(mammals)
 ```
 
 2. Are there any NAs? Are you sure? Try taking an average of `max. life` as a test.  
 ```{r}
-
+anyNA(mammals)
+mean(mammals$`max. life`)
 ```
+No, not technically, but the code -999 is used instead of NAs or blanks, so this must be addressed.
 
 3. What are the names of the columns in the `mammals` data?
 ```{r}
-
+names(mammals)
 ```
 
 4. Rename any columns that have capitol letters or punctuation issues.  
 ```{r}
-
+mammals2 <- rename(mammals, 
+                   genus = "Genus", 
+                   wean_mass = "wean mass", 
+                   max.life = "max. life", 
+                   litter_size = "litter size", 
+                   litters_year = "litters/year")
+mammals2
 ```
 
 5. We are only interested in the variables `genus`, `species`, and `mass`. Use `select()` to build a new dataframe `mass` focused on these variables.
 ```{r}
-
+mass <- data.frame(select(mammals2, "genus", "species", "mass"))
+mass
 ```
 
 6. What if we only wanted to exclude `order` and `family`? Use the `-` operator to make the code efficient.
 ```{r}
-
+select(mammals2, -"order", -"family")
 ```
 
 7. Select the columns that include "mass" as part of the name.  
 ```{r}
-
+select(mammals2, contains("mass"))
 ```
 
 8. Select all of the columns that are of class `character`.  
 ```{r}
-
+select_if(mammals2, is.character)
+# or can use 
+#select_if(mammals2, ~is.character(.))
 ```
 
 ## Other
+### **NB TIPS**
 Here are two examples of code that are super helpful to have in your bag of tricks.  
 
 Imported data frames often have a mix of lower and uppercase column names. Use `toupper()` or `tolower()` to fix this issue. I always try to use lowercase to keep things consistent.  
@@ -190,7 +207,7 @@ Imported data frames often have a mix of lower and uppercase column names. Use `
 
 When naming columns, blank spaces are often added (don't do this, please). Here is a trick to remove these.  
 ```{r}
-#select_all(mammals, ~str_replace(., " ", "_"))
+#select_all(mammals, ~str_replace(., " ", "_")) #the last character here is what you are replacing everything with.
 ```
 
 ## That's it! Let's take a break and then move on to part 2! 
