--- a/lab4/lab4_2.Rmd
+++ b/lab4/lab4_2.Rmd
@@ -18,6 +18,8 @@ output:
 ## Review  
 In the previous lab, we used `select()` to extract columns of interest from a data frame. This helps us focus our attention on the variables relevant to our question. However, it doesn't allow us to extract observations from within the data frame. The `filter()` function allows us to extract data that meet specific criteria. When combined with `select()`, we have the power to transform, shape, and explore data with the potential to make new discoveries.  
 
+NOTE: An object will appear in the Environment. It can be many things e.g. vectors, values, etc. 
+
 ## Load the tidyverse
 ```{r message=FALSE, warning=FALSE}
 library("tidyverse")
@@ -39,6 +41,7 @@ mammals <- rename(mammals, genus=Genus, wean_mass="wean mass", max_life="max. li
 ```
 
 ## `filter()`
+select() looks in columns (works vertically), whereas filter() looks inside the rows.
 Unlike `select()`, `filter()` allows us to extract data that meet specific criteria within a variable. Let's say that we are interested only in the fish that occur in lake "AL". We can use `filter()` to extract these observations.  
 ```{r}
 filter(fish, lakeid == "AL")
@@ -57,7 +60,9 @@ filter(fish, lakeid != "AL")
 ```
 
 ## Using `filter()` with multiple observations  
-Filtering multiple values within the same variable requires the `%in%` [operator](https://www.tutorialspoint.com/r/r_operators.htm).    
+Filtering multiple values within the same variable requires the `%in%` [operator](https://www.tutorialspoint.com/r/r_operators.htm). 
+
+Filter within a specific range:
 ```{r}
 filter(fish, length %in% c(167, 175))
 ```
@@ -75,22 +80,22 @@ filter(fish, near(radii_length_mm, 2, tol = 0.2))
 ## Practice
 1. Filter the `fish` data to include the samples from lake "BO".
 ```{r}
-
+filter(fish, lakeid == "BO")
 ```
 
 2. Filter the data to include all lakes except "AR".
 ```{r}
-
+filter(fish, lakeid != "AR")
 ```
 
 3. Filter the fish data to include all fish with a scalelength within 0.25 of 8.
 ```{r}
-
+filter(fish, near(scalelength, 8, tol = 0.25))
 ```
 
 4. Filter the fish data to include fish with a scalelength between 2 and 4.
 ```{r}
-
+filter(fish, between(scalelength, 2,4))
 ```
 
 ## Using `filter()` on multiple conditions
@@ -100,15 +105,16 @@ filter(fish, lakeid == "AL" & length > 350)
 ```
 
 Notice that the `|` operator generates a different result.
+ -> "|" gives results for "OR"
 ```{r}
 filter(fish, lakeid == "AL" | length > 350)
 ```
 
 Rules:  
-+ `filter(condition1, condition2)` will return rows where both conditions are met.  
-+ `filter(condition1, !condition2)` will return all rows where condition one is true but condition 2 is not.  
-+ `filter(condition1 | condition2)` will return rows where condition 1 or condition 2 is met.  
-+ `filter(xor(condition1, condition2)` will return all rows where only one of the conditions is met, and not when both conditions are met.  
++ `filter(condition1, condition2)` will return rows where **both** conditions are met.  
++ `filter(condition1, !condition2)` will return all rows where condition one is true **but** condition 2 is not.  
++ `filter(condition1 | condition2)` will return rows where condition 1 **or** condition 2 is met.  
++ `filter(xor(condition1, condition2)` will return all rows where only one of the conditions is met, and **not when both conditions are met**.  
 
 In this case, we filter out the fish with a length over 400 and a scale length over 11 or a radii length over 8.
 ```{r}
@@ -118,27 +124,28 @@ filter(fish, length > 400, (scalelength > 11 | radii_length_mm > 8))
 ## Practice  
 1. Have a look at the mammals data using the summary functions of your choosing.    
 ```{r}
-
+glimpse(mammals)
 ```
 
 2. What are the names of the variables in the mammals data?  
 ```{r}
-
+names(mammals)
 ```
 
 3.  From the `mammals` data, filter all members of the family Bovidae with a mass greater than 450000.
 ```{r}
-
+filter(mammals, family == "Bovidae" & mass > 450000)
 ```
 
 4. Let's say we are only interested in family, genus, species, mass, and gestation. Relimit the mammals data frame to these variables.  
 ```{r}
-
+mammals2 <- data.frame(select(mammals, "family", "genus", "species", "mass", "gestation"))
+mammals2
 ```
 
 5. Use the output from #4 to focus on the family Bovidae with a mass greater than 450000.
 ```{r}
-
+filter(mammals2, family == "Bovidae" & mass > 450000)
 ```
 
 6. From the `mammals` data, build a data frame that compares `mass`, `gestation`, and `newborn` among the primate genera `Lophocebus`, `Erythrocebus`, and `Macaca`. Among these genera, which species has the smallest `newborn` mass?
