--- a/lab5/lab5_2.Rmd
+++ b/lab5/lab5_2.Rmd
@@ -2,10 +2,11 @@
 title: "dplyr Superhero"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
     toc: yes
     toc_float: yes
+    keep_md: yes
 ---
 
 ## Learning Goals  
@@ -22,7 +23,7 @@ library("tidyverse")
 ```
 
 ## Load the superhero data
-These are data taken from comic books and assembled by fans. The include a good mix of categorical and continuous data.  Data taken from: https://www.kaggle.com/claudiodavi/superhero-set  
+These are data taken from comic books and assembled by fans. The include a good mix of categorical and continuous data.  Data taken from: https://www.kaggle.com/claudiodavi/superhero-set 
 
 Check out the way I am loading these data. If I know there are NAs, I can take care of them at the beginning. But, we should do this very cautiously. At times it is better to keep the original columns and data intact.  
 **Never do this with unfamiliar datasets**
@@ -68,7 +69,7 @@ replaces all spaces with"_" and puts everything in lowercase
 superhero_powers <- janitor::clean_names(superhero_powers)
 ```
 ```{r}
-head(superhero_powers) #see they are all fixed!
+head(superhero_powers) #see - they are all fixed!
 ```
 
 ## `tabyl`
@@ -102,15 +103,13 @@ superhero_info %>%
 ## Good and Evil
 5. Let's make two different data frames, one focused on the "good guys" and another focused on the "bad guys".
 ```{r}
-good_guys <- data.frame(
-  superhero_info %>% 
-  filter(alignment == "good"))
+good_guys <- superhero_info %>% 
+  filter(alignment == "good")
 ```
 
 ```{r}
-bad_guys <- data.frame(
-  superhero_info %>% 
-  filter(alignment == "bad"))
+bad_guys <- superhero_info %>% 
+  filter(alignment == "bad")
 ```
 
 6. For the good guys, use the `tabyl` function to summarize their "race".
@@ -132,28 +131,41 @@ bad_guys %>%
 
 9. OK, so are there more good guys or bad guys that are bald (personal interest)?
 ```{r}
-
+  tabyl(bad_guys, hair_color)
 ```
+For the bad guys, there are 35 No Hair and 53 NAs.
 
-10. Let's explore who the really "big" superheros are. In the `superhero_info` data, which have a height over 200 or weight greater than or equal to 450?
 ```{r}
+  tabyl(good_guys, hair_color)
+```
+For the good guys, there are 37 No Hair and 114 NAs.
+So, there are more good guys that don't are bald.
 
+10. Let's explore who the really "big" superheros are. In the `superhero_info` data, which have a height over 300 or weight greater than or equal to 450?
+```{r}
+superhero_info %>% 
+  filter(weight >= 450 | height > 300)
 ```
 
 11. Just to be clear on the `|` operator,  have a look at the superheros over 300 in height...
 ```{r}
-
+superhero_info %>% 
+  filter(height > 300)
 ```
 
 12. ...and the superheros over 450 in weight. Bonus question! Why do we not have 16 rows in question #10?
+Because some weight over 450 and are taller than 300 and so occur in both of these subsetted dataframes.
 ```{r}
-
+superhero_info %>% 
+  filter(weight >= 450)
 ```
 
 ## Height to Weight Ratio
 13. It's easy to be strong when you are heavy and tall, but who is heavy and short? Which superheros have the highest height to weight ratio?
 ```{r}
-
+superhero_info %>% 
+  mutate(hw_ratio = height/weight) %>% 
+  arrange(desc(hw_ratio))
 ```
 
 ## `superhero_powers`
@@ -164,14 +176,19 @@ glimpse(superhero_powers)
 
 14. How many superheros have a combination of accelerated healing, durability, and super strength?
 ```{r}
-
+superhero_powers %>% 
+  select(hero_names, accelerated_healing,  durability, super_strength) %>% 
+  filter(accelerated_healing == "TRUE" & durability == "TRUE" & super_strength == "TRUE")
 ```
 
-## Your Favorite
+## **Your Favorite** NB Q!
 15. Pick your favorite superhero and let's see their powers!
 ```{r}
-
+superhero_powers %>% 
+  filter(hero_names == "Angel") %>%
+  select_if(all_vars(.=="TRUE"))
 ```
+
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences.  
