--- a/lab5/lab5_hw.Rmd
+++ b/lab5/lab5_hw.Rmd
@@ -9,27 +9,47 @@ output:
     keep_md: yes
 ---
 
+## Learning Goals  
+*At the end of this exercise, you will be able to:*    
+1. Develop your dplyr superpowers so you can easily and confidently manipulate dataframes.  
+2. Learn helpful new functions that are part of the `janitor` package.  
+
+## Instructions
+For the second part of lab 5 today, we are going to spend time practicing the dplyr functions we have learned and add a few new ones. We will spend most of the time in our breakout rooms. Your lab 5 homework will be to knit and push this file to your repository.  
+
 ## Load the tidyverse
 ```{r}
 library("tidyverse")
 ```
 
 ## Load the superhero data
-These are data taken from comic books and assembled by fans. The include a good mix of categorical and continuous data.  Data taken from: https://www.kaggle.com/claudiodavi/superhero-set  
+These are data taken from comic books and assembled by fans. The include a good mix of categorical and continuous data.  Data taken from: https://www.kaggle.com/claudiodavi/superhero-set 
 
 Check out the way I am loading these data. If I know there are NAs, I can take care of them at the beginning. But, we should do this very cautiously. At times it is better to keep the original columns and data intact.  
+**Never do this with unfamiliar datasets**
 ```{r}
 superhero_info <- readr::read_csv("data/heroes_information.csv", na = c("", "-99", "-"))
-```
-
-```{r}
 superhero_powers <- readr::read_csv("data/super_hero_powers.csv", na = c("", "-99", "-"))
 ```
 
 ## Data tidy
 1. Some of the names used in the `superhero_info` data are problematic so you should rename them here.  
 ```{r}
+names(superhero_info)
+```
 
+```{r}
+superhero_id <- 
+  rename(superhero_info,gender = "Gender",
+         eye_color = "Eye color", 
+         race = "Race", 
+         hair_color = "Hair color", 
+         height = "Height", 
+         publisher = "Publisher", 
+         skin_color = "Skin color", 
+         alignment = "Alignment", 
+         weight = "Weight" )
+superhero_id
 ```
 
 Yikes! `superhero_powers` has a lot of variables that are poorly named. We need some R superpowers...
@@ -37,90 +57,115 @@ Yikes! `superhero_powers` has a lot of variables that are poorly named. We need 
 head(superhero_powers)
 ```
 
-## `janitor`
+## `janitor` Use this instead!
 The [janitor](https://garthtarr.github.io/meatR/janitor.html) package is your friend. Make sure to install it and then load the library.  
 ```{r}
 library("janitor")
 ```
 
 The `clean_names` function takes care of everything in one line! Now that's a superpower!
+replaces all spaces with"_" and puts everything in lowercase
 ```{r}
 superhero_powers <- janitor::clean_names(superhero_powers)
+```
+```{r}
+head(superhero_powers) #see - they are all fixed!
 ```
 
 ## `tabyl`
 The `janitor` package has many awesome functions that we will explore. Here is its version of `table` which not only produces counts but also percentages. Very handy! Let's use it to explore the proportion of good guys and bad guys in the `superhero_info` data.  
 
 ```{r}
-#tabyl(superhero_info, alignment)
+superhero_info <- janitor::clean_names(superhero_info)
+tabyl(superhero_info, alignment)
 ```
 
 2. Notice that we have some neutral superheros! Who are they?
 ```{r}
-
+superhero_info %>% 
+  filter(alignment == "neutral")
 ```
 
 ## `superhero_info`
 3. Let's say we are only interested in the variables name, alignment, and "race". How would you isolate these variables from `superhero_info`?
 ```{r}
-
+superhero_info %>% 
+  select(name, alignment, race)
 ```
 
 ## Not Human
 4. List all of the superheros that are not human.
 ```{r}
-
+superhero_info %>% 
+  filter(!race == "Human")
 ```
 
 ## Good and Evil
 5. Let's make two different data frames, one focused on the "good guys" and another focused on the "bad guys".
 ```{r}
-
+good_guys <- superhero_info %>% 
+  filter(alignment == "good")
 ```
 
 ```{r}
-
+bad_guys <- superhero_info %>% 
+  filter(alignment == "bad")
 ```
 
 6. For the good guys, use the `tabyl` function to summarize their "race".
 ```{r}
-
+tabyl(good_guys, race)
 ```
 
 7. Among the good guys, Who are the Asgardians?
 ```{r}
-
+good_guys %>% 
+  filter(race == "Asgardian")
 ```
 
 8. Among the bad guys, who are the male humans over 200 inches in height?
 ```{r}
-
+bad_guys %>% 
+  filter(gender == "Male" & height >= 200)
 ```
 
 9. OK, so are there more good guys or bad guys that are bald (personal interest)?
 ```{r}
-
+  tabyl(bad_guys, hair_color)
 ```
+For the bad guys, there are 35 No Hair and 53 NAs.
 
-10. Let's explore who the really "big" superheros are. In the `superhero_info` data, which have a height over 200 or weight greater than or equal to 450?
 ```{r}
+  tabyl(good_guys, hair_color)
+```
+For the good guys, there are 37 No Hair and 114 NAs.
+So, there are more good guys that don't are bald.
 
+10. Let's explore who the really "big" superheros are. In the `superhero_info` data, which have a height over 300 or weight greater than or equal to 450?
+```{r}
+superhero_info %>% 
+  filter(weight >= 450 | height > 300)
 ```
 
 11. Just to be clear on the `|` operator,  have a look at the superheros over 300 in height...
 ```{r}
-
+superhero_info %>% 
+  filter(height > 300)
 ```
 
 12. ...and the superheros over 450 in weight. Bonus question! Why do we not have 16 rows in question #10?
+Because some weight over 450 and are taller than 300 and so occur in both of these subsetted dataframes.
 ```{r}
-
+superhero_info %>% 
+  filter(weight >= 450)
 ```
 
 ## Height to Weight Ratio
 13. It's easy to be strong when you are heavy and tall, but who is heavy and short? Which superheros have the highest height to weight ratio?
 ```{r}
-
+superhero_info %>% 
+  mutate(hw_ratio = height/weight) %>% 
+  arrange(desc(hw_ratio))
 ```
 
 ## `superhero_powers`
@@ -131,14 +176,20 @@ glimpse(superhero_powers)
 
 14. How many superheros have a combination of accelerated healing, durability, and super strength?
 ```{r}
-
+superhero_powers %>% 
+  select(hero_names, accelerated_healing,  durability, super_strength) %>% 
+  filter(accelerated_healing == "TRUE" & durability == "TRUE" & super_strength == "TRUE")
 ```
 
-## Your Favorite
+## **Your Favorite** 
+### NB Q!
 15. Pick your favorite superhero and let's see their powers!
 ```{r}
-
+superhero_powers %>% 
+  filter(hero_names == "Angel") %>%
+  select_if(all_vars(.=="TRUE"))
 ```
 
+
 ## Push your final code to GitHub!
-Please be sure that you check the `keep md` file in the knit preferences.   
+Please be sure that you check the `keep md` file in the knit preferences.  
