--- a/Cheatsheets/BIS015 Cheatsheet 1.Rmd
+++ b/Cheatsheets/BIS015 Cheatsheet 1.Rmd
@@ -38,6 +38,12 @@ head()
 summary()
 ```
 
+To simply ask if there are any NAs at all, we can use any(is.na(x)) 
+
+```{r}
+any(is.na(sleep))
+```
+
 **Renaming variables**
 1. Manually:
 ```{r}
@@ -83,6 +89,14 @@ fish %>%
   filter(lakeid == "AL")
 ```
 
+#### **n_distinct**
+```{r}
+penguins %>%
+  summarize(distinct_species = n_distinct(species),
+            distinct_island = n_distinct(island),
+            distinct_sex = n_distinct(sex))
+```
+
 #### **mean()**
 ```{r}
 mean(elephants$age)
@@ -106,10 +120,25 @@ mammals %>%
 
 Using the **across** function we can specify individual **columns** in which to change the observations.
 across() makes it easy to apply the same transformation to multiple columns, allowing you to use select() semantics inside in "data-masking" functions like summarise() and mutate()
+`across()` uses `filter()` and `select()` across multiple variables. 
 ```{r}
 mammals %>% 
   mutate(across(c("order", "family"), tolower))
 ```
+Categorical:
+```{r}
+penguins %>%
+  summarize(across(c(species, island, sex), n_distinct))
+```
+
+Continuous:
+```{r}
+penguins %>%
+  group_by(sex) %>% 
+  summarize(across(contains("mm"), mean, na.rm=T))
+```
+
+
 
 #### **tabyl()**
 ```{r}
@@ -138,9 +167,71 @@ elephants %>%
             total=n())
 ```
 
-Extracting specific values:
+Summarize across all continuous variables:
+```{r}
+penguins %>%
+  summarise_all(mean, na.rm=T)
+```
+
+Summarize but remove the categorical variables
+```{r}
+penguins %>%
+  summarise(across(!c(species, island, sex, year), 
+                   mean, na.rm=T))
+```
+
+#### **Extracting specific values**
 ```{r}
 superhero_powers %>% 
   filter(hero_names == "Angel") %>%
   select_if(all_vars(.=="TRUE"))
 ```
+
+#### **count()**
+`count()` is an easy way of determining how many observations you have within a column. It acts like a combination of `group_by()` and `n()`.
+```{r}
+penguins %>% 
+  count(island, sort = T) #sort=T sorts the column in descending order
+```
+
+Tabyl has nicer output for counts
+```{r}
+penguins %>% 
+  tabyl(island, species)
+```
+
+```{r}
+penguins %>% 
+  tabyl(species, island) %>% 
+  adorn_percentages() %>%
+  adorn_pct_formatting(digits = 2)
+```
+
+```{r}
+penguins %>% 
+  group_by(species) %>%
+  summarise(across(c(bill_length_mm, bill_depth_mm, flipper_length_mm),
+                    mean, na.rm=T), total=n())
+```
+
+#### **slice_max()** and **slice_min()** will give you only the max or min observation
+```{r}
+fisheries_tidy %>% 
+  filter(year == "2000") %>% 
+  group_by(country) %>% 
+  summarize(max_catch= max(catch, na.rm = TRUE)) %>% 
+  #arrange(desc(max_catch)) #we can either arrange the whole list, or just extract the max value with slice_max()
+  slice_max(max_catch)
+```
+
+Filtering a range of years
+```{r}
+fisheries_tidy %>% 
+  filter(between(year, 2008, 2012), asfis_species_name == "Cephalopoda") %>% 
+  group_by(country) %>% 
+  summarise(max_cephalopods = max(catch, na.rm = TRUE)) %>% 
+  arrange(desc(max_cephalopods)) %>% 
+  slice_max(max_cephalopods, n=5) # if you don't specify n, it will just give 1 value
+```
+
+
