--- a/lab6/homework/lab6_hw.Rmd
+++ b/lab6/homework/lab6_hw.Rmd
@@ -33,74 +33,189 @@ fisheries <- readr::read_csv(file = "data/FAO_1950to2012_111914.csv")
 
 1. Do an exploratory analysis of the data (your choice). What are the names of the variables, what are the dimensions, are there any NA's, what are the classes of the variables?  
 ```{r}
-
+glimpse(fisheries)
 ```
+Yes there are many NAs.
 
 2. Use `janitor` to rename the columns and make them easier to use. As part of this cleaning step, change `country`, `isscaap_group_number`, `asfis_species_number`, and `fao_major_fishing_area` to data class factor. 
 ```{r}
-
+fisheries <- janitor::clean_names(fisheries)
 ```
 
 ```{r}
-
+fisheries <- fisheries %>% 
+        mutate(across(c("country", "isscaap_group_number", "asfis_species_number", "fao_major_fishing_area"), as.factor))
 ```
+
+```{r}
+glimpse(fisheries)
+```
+
 
 We need to deal with the years because they are being treated as characters and start with an X. We also have the problem that the column names that are years actually represent data. We haven't discussed tidy data yet, so here is some help. You should run this ugly chunk to transform the data for the rest of the homework. It will only work if you have used janitor to rename the variables in question 2!
 ```{r}
-#fisheries_tidy <- fisheries %>% 
-#  pivot_longer(-c(country,common_name,isscaap_group_number,isscaap_taxonomic_group,as#fis_species_number,asfis_species_name,fao_major_fishing_area,measure),
-#               names_to = "year",
-#               values_to = "catch",
-#               values_drop_na = TRUE) %>% 
-#  mutate(year= as.numeric(str_replace(year, 'x', ''))) %>% 
-#  mutate(catch= str_replace(catch, c(' F'), replacement = '')) %>% 
-#  mutate(catch= str_replace(catch, c('...'), replacement = '')) %>% 
-#  mutate(catch= str_replace(catch, c('-'), replacement = '')) %>% 
-#  mutate(catch= str_replace(catch, c('0 0'), replacement = ''))
-#
-#fisheries_tidy$catch <- as.numeric(fisheries_tidy$catch)
+fisheries_tidy <- fisheries %>% 
+pivot_longer(-c(country,common_name,isscaap_group_number,isscaap_taxonomic_group,
+              asfis_species_number,asfis_species_name,fao_major_fishing_area,measure),
+              names_to = "year",
+              values_to = "catch",
+              values_drop_na = TRUE) %>% 
+  mutate(year= as.numeric(str_replace(year, 'x', ''))) %>% 
+  mutate(catch= str_replace(catch, c(' F'), replacement = '')) %>% 
+  mutate(catch= str_replace(catch, c('...'), replacement = '')) %>% 
+  mutate(catch= str_replace(catch, c('-'), replacement = '')) %>% 
+  mutate(catch= str_replace(catch, c('0 0'), replacement = ''))
+
+fisheries_tidy$catch <- as.numeric(fisheries_tidy$catch)
 ```
 
 3. How many countries are represented in the data? Provide a count and list their names.
 ```{r}
-
+fisheries %>% 
+  tabyl(country, total=n())
 ```
 
 4. Refocus the data only to include country, isscaap_taxonomic_group, asfis_species_name, asfis_species_number, year, catch.
 ```{r}
-
+fisheries_tidy %>% 
+  select(country, isscaap_taxonomic_group, asfis_species_name, asfis_species_number, year, catch)
 ```
 
 5. Based on the asfis_species_number, how many distinct fish species were caught as part of these data?
 ```{r}
-
+fisheries_tidy %>% 
+  summarize(distinct_sp_catch = n_distinct(asfis_species_number))
 ```
 
 6. Which country had the largest overall catch in the year 2000?
 ```{r}
-
+fisheries_tidy %>% 
+  filter(year == "2000") %>% 
+  group_by(country) %>% 
+  summarize(max_catch= max(catch, na.rm = TRUE)) %>% 
+  #arrange(desc(max_catch)) #we can either arrange the whole list, or just extract the max value with slice_max()
+  slice_max(max_catch)
 ```
 
 7. Which country caught the most sardines (_Sardina pilchardus_) between the years 1990-2000?
 ```{r}
-
+fisheries_tidy %>% 
+  filter(between(year, 1990, 2000), asfis_species_name == "Sardina pilchardus") %>% 
+  group_by(country) %>% 
+  summarise(max_sardines = max(catch, na.rm = TRUE)) %>% 
+  slice_max(max_sardines)
 ```
 
 8. Which five countries caught the most cephalopods between 2008-2012?
 ```{r}
-
+fisheries_tidy %>% 
+  filter(between(year, 2008, 2012), asfis_species_name == "Cephalopoda") %>% 
+  group_by(country) %>% 
+  summarise(max_cephalopods = max(catch, na.rm = TRUE)) %>% 
+  arrange(desc(max_cephalopods)) %>% 
+  slice_max(max_cephalopods, n=5)
 ```
 
 ```{r}
 
 ```
 
-9. Which species had the highest catch total between 2008-2012? (hint: Osteichthyes is not a species)
+9. Which species had the highest catch total between 2008-2012? (hint: Osteichthyes is not a species) *Truchuris lepturus*
 ```{r}
-
+fisheries_tidy %>% 
+  filter(between(year, 2008, 2012), !isscaap_taxonomic_group == "Marine fishes not identified") %>% 
+  group_by(asfis_species_name) %>% 
+  summarise(max_species = max(catch, na.rm = TRUE)) %>% 
+  arrange(desc(max_species)) %>% 
+  slice_max(max_species, n=5)
 ```
 
 10. Use the data to do at least one analysis of your choice.
 
+What are the three most common species of fish caught each decade, and how do they compare? (We will exclude 1969 and 2010-12 as these are not complete decades.)
+
+1970s
+```{r}
+d70 <- fisheries_tidy %>% 
+      filter(!isscaap_taxonomic_group == "Marine fishes not identified", between(year, 1970, 1979)) %>% 
+      group_by(asfis_species_name) %>% 
+      summarise(max_species = max(catch, na.rm = TRUE)) %>% 
+      arrange(max_species) %>% 
+      slice_max(max_species, n=3)
+d70
+```
+1980s
+```{r}
+d80 <- fisheries_tidy %>% 
+      filter(!isscaap_taxonomic_group == "Marine fishes not identified", between(year, 1980, 1989)) %>% 
+      group_by(asfis_species_name) %>% 
+      summarise(max_species = max(catch, na.rm = TRUE)) %>% 
+      arrange(max_species) %>% 
+      slice_max(max_species, n=3)
+d80
+```
+1990s
+```{r}
+d90 <- fisheries_tidy %>% 
+      filter(!isscaap_taxonomic_group == "Marine fishes not identified", between(year, 1990, 1999)) %>% 
+      group_by(asfis_species_name) %>% 
+      summarise(max_species = max(catch, na.rm = TRUE)) %>% 
+      arrange(max_species) %>% 
+      slice_max(max_species, n=3)
+d90
+```
+2000s
+```{r}
+d00 <- fisheries_tidy %>% 
+      filter(!isscaap_taxonomic_group == "Marine fishes not identified", between(year, 2000, 2009)) %>% 
+      group_by(asfis_species_name) %>% 
+      summarise(max_species = max(catch, na.rm = TRUE)) %>% 
+      arrange(max_species) %>% 
+      slice_max(max_species, n=3)
+d00
+```
+In the 70s, Engraulis ringens was the most numerous fish species caught by far. In the 80s, sardines were favoured. Both in the 1990s and 2000s, the same top three species of fish were caught, namely, Trachurus murphyi, Theragra chalcogramma, and Engraulis ringens.
+
 ## Push your final code to GitHub!
-Please be sure that you check the `keep md` file in the knit preferences.   
+Please be sure that you check the `keep md` file in the knit preferences. 
+
+
+================================================================================
+================================================================================
+#### **QUESTIONS FOR JOEL**
+
+================================================================================
+================================================================================
+```{r}
+decade <- as.data.frame(c(d70, d80, d90, d00))
+decade
+```
+
+What would be a better way to code for my question above? I tried these two methods but no success.
+
+#```{r}
+fisheries_tidy %>% 
+  filter(!isscaap_taxonomic_group == "Marine fishes not identified") %>% 
+  mutate(as.numeric(decade = rename(d70 = between(year, 1970, 1979)))) %>%
+  mutate(decade = rename(d80 = between(year, 1980, 1989))) %>% 
+  mutate(decade = rename(d90 = between(year, 1990, 1999))) %>%
+  mutate(decade = rename(d00 = between(year, 2000, 2009))) %>%
+  group_by(asfis_species_name, decade) %>% 
+  summarise(min_species = min(catch, na.rm = TRUE)) %>% 
+  arrange(min_species) %>% 
+  slice_min(min_species, n=5)
+```
+
+#```{r}
+fisheries_tidy %>% 
+  filter(!isscaap_taxonomic_group == "Marine fishes not identified") %>% 
+  mutate(decade = rename(year, between(year, 1970, 1979), d70, year)) %>%
+  mutate(decade = if_else(year, between(year, 1980, 1989), d80, year)) %>% 
+  mutate(decade = if_else(year, between(year, 1990, 1999), d90, year)) %>%
+  mutate(decade = if_else(year, between(year, 2000, 2009), d00, year)) %>%
+  group_by(asfis_species_name, decade) %>% 
+  summarise(min_species = min(catch, na.rm = TRUE)) %>% 
+  arrange(min_species) %>% 
+  slice_min(min_species, n=5)
+```
+  
