--- a/lab8/lab8_hw.Rmd
+++ b/lab8/lab8_hw.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Lab 8 Homework"
-author: "Please Add Your Name Here"
+author: "Oonagh Pretorius"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -30,13 +30,17 @@ The package `here` is a nice option for keeping directories clear when loading f
 ```
 
 ## Data
-For this homework, we will use a data set compiled by the Office of Environment and Heritage in New South Whales, Australia. It contains the enterococci counts in water samples obtained from Sydney beaches as part of the Beachwatch Water Quality Program. Enterococci are bacteria common in the intestines of mammals; they are rarely present in clean water. So, enterococci values are a measurement of pollution. `cfu` stands for colony forming units and measures the number of viable bacteria in a sample [cfu](https://en.wikipedia.org/wiki/Colony-forming_unit).   
+For this homework, we will use a data set compiled by the Office of Environment and Heritage in New South Wales, Australia. It contains the enterococci counts in water samples obtained from Sydney beaches as part of the Beachwatch Water Quality Program. Enterococci are bacteria common in the intestines of mammals; they are rarely present in clean water. So, enterococci values are a measurement of pollution. `cfu` stands for colony forming units and measures the number of viable bacteria in a sample [cfu](https://en.wikipedia.org/wiki/Colony-forming_unit).   
 
 This homework loosely follows the tutorial of [R Ladies Sydney](https://rladiessydney.org/). If you get stuck, check it out!  
 
 1. Start by loading the data `sydneybeaches`. Do some exploratory analysis to get an idea of the data structure.
 ```{r}
-
+sydney_beaches <- readr::read_csv("data/sydneybeaches.csv")
+sydney_beaches
+```
+```{r}
+glimpse(sydney_beaches)
 ```
 
 If you want to try `here`, first notice the output when you load the `here` library. It gives you information on the current working directory. You can then use it to easily and intuitively load files.
@@ -46,31 +50,75 @@ library(here)
 
 The quotes show the folder structure from the root directory.
 ```{r}
-sydneybeaches <-read_csv(here("lab8", "data", "sydneybeaches.csv")) %>% janitor::clean_names()
+sydney_beaches <-read_csv(here("lab8", "data", "sydneybeaches.csv")) %>% janitor::clean_names()
 ```
+
+
 
 2. Are these data "tidy" per the definitions of the tidyverse? How do you know? Are they in wide or long format?
 
+*Yes, they are tidy; one variable per column, one observation per row, and one value per cell. They are in long format.*
+
 
 3. We are only interested in the variables site, date, and enterococci_cfu_100ml. Make a new object focused on these variables only. Name the object `sydneybeaches_long`
+```{r}
+sydneybeaches_long <- sydney_beaches %>% 
+  select(site, date, enterococci_cfu_100ml)
+sydneybeaches_long
+```
 
 
 4. Pivot the data such that the dates are column names and each beach only appears once. Name the object `sydneybeaches_wide`
+```{r}
+sydneybeaches_wide <- sydneybeaches_long %>% 
+  pivot_wider(names_from = "date", 
+              values_from = "enterococci_cfu_100ml")
+sydneybeaches_wide
+```
 
 
 5. Pivot the data back so that the dates are data and not column names.
-
+```{r}
+sydneybeaches_long2 <- sydneybeaches_wide %>% 
+  pivot_longer(-site, 
+               names_to = "date",
+               values_to = "enterococci_cfu_100ml")
+sydneybeaches_long2
+```
+*For some reason there are now 94 additional observations as compared to the original sydneybeaches_long. ???
 
 6. We haven't dealt much with dates yet, but separate the date into columns day, month, and year. Do this on the `sydneybeaches_long` data.
+```{r}
+sydneybeaches_long_date <- sydneybeaches_long %>% 
+  separate(date, into=c("day", "month", "year"), sep = "/")
+sydneybeaches_long_date
+```
 
 
 7. What is the average `enterococci_cfu_100ml` by year for each beach. Think about which data you will use- long or wide.
+```{r}
+sydneybeaches_long_av <- sydneybeaches_long_date %>% 
+  group_by(site, year) %>% 
+  summarise(av_enterococci_cfu_100ml= mean(enterococci_cfu_100ml, na.rm = TRUE)) 
+sydneybeaches_long_av
+```
 
 
 8. Make the output from question 7 easier to read by pivoting it to wide format.
+```{r}
+sydneybeaches_wide_av <- sydneybeaches_long_av %>% 
+  pivot_wider(names_from = "year",
+                 values_from = "av_enterococci_cfu_100ml")
+sydneybeaches_wide_av
+```
 
 
-9. What was the most polluted beach in 2018?
+9. What was the most polluted beach in 2018? *South Maroubra Rockpool*
+```{r}
+sydneybeaches_long_av %>% 
+  filter(year == "2018") %>% 
+  arrange(desc(av_enterococci_cfu_100ml))
+```
 
 
 10. Please complete the class project survey at: [BIS 15L Group Project](https://forms.gle/H2j69Z3ZtbLH3efW6)
