--- a/lab11/lab11_2.Rmd
+++ b/lab11/lab11_2.Rmd
@@ -98,26 +98,26 @@ p+ theme_igray()+
 ```
 
 ## RColorBrewer
-The default colors used by ggplot are often uninspiring. They don't make plots pop out in presentations or publications, and you may want to use a customized palette to make things visually consistent.  
+The default colors used by ggplot are often uninspiring. They don't make plots pop out in presentations or publications, and you may want to use a customized palette to make things visually consistent.  Developed for mapping.
 
 Access the help for `RColorBrewer`.
 ```{r}
 ?RColorBrewer
 ```
 
-The thing to notice is that there are three different palettes: 1) sequential, 2) diverging, and 3) qualitative. Within each of these there are several selections. You can bring up the colors by using `display.brewer.pal()`. Specify the number of colors that you want and the palette name.
+The thing to notice is that there are three different palettes: 1) sequential (continuous), 2) diverging (sharp contrasts), and 3) qualitative. Within each of these there are several selections. You can bring up the colors by using `display.brewer.pal()`. Specify the number of colors that you want and the palette name.
 ```{r}
-display.brewer.pal(4,"GnBu")
+display.brewer.pal(8,"GnBu") #number specifies no. shades
 ```
 
 The [R Color Brewer](http://colorbrewer2.org/#type=sequential&scheme=BuGn&n=3) website is very helpful for getting an idea of the color palettes. To make things easy, use these two guidelines:
 
-+`scale_colour_brewer()` is for points  
-+`scale_fill_brewer()` is for fills  
++`scale_colour_brewer()` is for points like in a scatter plot
++`scale_fill_brewer()` is for fills for blocks/shapes
 
 Here I chose the `Paired` palette. Take a moment and experiment with other options.
 ```{r}
-p+scale_fill_brewer(palette = "BuPu")+
+p+scale_fill_brewer(palette = "BuGn")+
   theme(legend.position = "bottom",
         axis.text.x = element_text(angle = 60, hjust=1))+
   labs(title = "Observations by Taxon in Homerange Data",
@@ -134,7 +134,7 @@ colors <- paletteer::palettes_d_names
 
 Now we can display the palettes. Assign the palette to `my_palette` and then build this base R bar plot. There are a lot of options; `paleteer` is a collection of popular palettes. I really like the [`ggsci` package] (https://cran.r-project.org/web/packages/ggsci/vignettes/ggsci.html)
 ```{r}
-my_palette <- paletteer_d("ggprism::flames")
+my_palette <- paletteer_d("ggsci::lanonc_lancet")
 ```
 
 ```{r}
@@ -165,12 +165,19 @@ homerange %>%
 ## Practice
 1. Revisit the relationship between mass and homerange using a scatterplot, but color the points by taxonomic class using a custom color theme.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x = log10.mass, y = log10.hra, color = taxon)) +
+  geom_point() +
+  scale_colour_brewer(palette = "BuGn")+
+  xlim(0, 4) +
+  ylim(1, 6)
 ```
-
+##### get from Joel's code!!
 2. Build bar plots that show the representation by taxonomic class with carnivores and herbivores. Try using a color theme that matches your scatterplot to keep everything consistent.
-```{r}
-
+```{r} 
+homerange %>% 
+  
+scale_fill_manual(palette = my_palette)
 ```
 
 ## Faceting
@@ -211,7 +218,7 @@ The problem is that the plot becomes very busy. It is hard to interpret with eac
 ecosphere %>% 
   ggplot(aes(x=diet, y=log10_mass, fill=migratory_strategy))+ 
   geom_boxplot(alpha=0.4) + 
-  facet_wrap(~migratory_strategy, ncol=4)+
+  facet_wrap(~migratory_strategy, ncol=4)+ #ncol is how many column plots you want per line
   theme(axis.text.x = element_text(angle = 60, hjust = 1))+
   labs(title = "Mass by Diet and Migratory Strategy",
        x = NULL,
@@ -266,14 +273,33 @@ ecosphere %>%
 ```
 
 ## Practice
-1. Build a faceted plot that shows a distribution of life expectancy by habitat type.
+1. Build a faceted plot that shows a distribution of log10_mass by habitat type.
 ```{r}
-
+ecosphere %>% 
+  ggplot(aes(x=habitat, y=log10_mass, fill=habitat))+ 
+  geom_boxplot(alpha=0.4)+ 
+  facet_grid(.~habitat)+
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))+
+  labs(title = "Mass by Mass and Habitat",
+       x = NULL,
+       y = "Log 10 Mass",
+       fill = "Habitat")
 ```
 
-2. Try the same plot as #1 above, but include life_expectancy~habitat.
+OR
 ```{r}
+ecosphere %>% 
+  ggplot(aes(x=log10_mass))+ 
+  geom_density(alpha=0.4)+ 
+  facet_grid(.~habitat)
+```
 
+2. Try the same plot as #1 above, but include life_expectancy(a)~habitat(b).
+```{r}
+ecosphere %>% 
+  ggplot(aes(x=log10_mass))+ 
+  geom_density(alpha=0.4)+ 
+  facet_grid(habitat~life_expectancy)
 ```
 
 ## That's it, let's take a break!   
