--- a/lab11/lab11_hw.Rmd
+++ b/lab11/lab11_hw.Rmd
@@ -158,7 +158,7 @@ gapminder2 %>%
 
 ```{r}
 gapminder2 %>% 
-  filter(year=="1999") %>% 
+  filter(year=="1987") %>% 
   ggplot(aes(x = gdpPercap, y = lifeExp, color = continent, size = pop)) +
   geom_point(alpha = 0.5) +
   scale_x_log10() +
@@ -170,7 +170,7 @@ gapminder2 %>%
   scale_size(range = c(0.1, 10),
              breaks = 1000000 * c(250, 500, 750, 1000, 1250),
              labels = c("250", "500", "750", "1000", "1250")) +
-  ## facet_wrap(~continent) OR (vars(continent))??
+  facet_wrap(~continent)
 ```
 
 
